--- a/teacher-info.html
+++ b/teacher-info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teacher Info</title>
+    <title>My Website - Teacher Info</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,25 +12,16 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="teacher-info.html">Teacher Info</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
         <h2>About the Teacher</h2>
-        <p>Here you can find details about my teaching experience, qualifications, and how to get in touch with me.</p>
-        <h3>Qualifications</h3>
-        <ul>
-            <li>Master's degree in Education</li>
-            <li>5 years of experience teaching French</li>
-            <li>Fluent in 5 languages</li>
-        </ul>
+        <p>This page contains information about the teacher.</p>
     </main>
-
     <footer>
-        <p>© 2024 My Website. All rights reserved.</p>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
 </body>
 </html>
