--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <footer>
         <p>Contact me to start your French journey online today!</p>
-        <p class="license">© 2024 Meriem Bensaid. All rights reserved. This website cannot be modified or reproduced without permission.</p>
+        <p class="license">© 2024 My Lesson French. All rights reserved. This website cannot be modified or reproduced without permission.</p>
     </footer>
 </body>
 </html>
