--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
             height: 150px;
             border-radius: 50%;
             margin-bottom: 15px;
+            <img src="https://via.placeholder.com/200" alt="Placeholder Image">
+
         }
         .blog-section article {
             margin-bottom: 20px;
