--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
             padding: 0;
             background-color: #f9f5ff; /* Light yellow */
             color: #4b0082; /* Purple */
+            <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="teacher-infos.html">Teacher Infos</a></li>
+    </ul>
+</nav>
+
         }
         header {
             background-color: #ffd700; /* Golden yellow */
