--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>French Lessons with Experience</title>
     <style>
         body {
+            <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="teacher-infos.html">Teacher Infos</a></li>
+    </ul>
+</nav>
+
             
             font-family: Arial, sans-serif;
             margin: 0;
