--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        /* Basic styling to make the navigation visible */
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 15px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: blue;
+        }
+
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f5ff; /* Light yellow */
+            color: #4b0082; /* Purple */
+        }
+        header {
+            background-color: #ffd700; /* Golden yellow */
+            color: #4b0082;
+            text-align: center;
+            padding: 20px;
+        }
+        section {
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 10px 0;
+        }
+        p {
+            line-height: 1.6;
+        }
+        .price-caption {
+            background-color: #4b0082;
+            color: #fff;
+            padding: 10px;
+            margin: 20px 0;
+            font-weight: bold;
+            border-radius: 5px;
+        }
+        .packs {
+            background-color: #fff8dc; /* Light cream yellow */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            width: 80%;
+            max-width: 600px;
+        }
+        .packs h2 {
+            color: #4b0082;
+        }
+        footer {
+            text-align: center;
+            background-color: #ffd700;
+            color: #4b0082;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        .language-switcher {
+            margin: 10px 0;
+            text-align: center;
+        }
+        .language-switcher button {
+            margin: 5px;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4b0082;
+            color: #fff;
+            cursor: pointer;
+        }
+        .language-switcher button:hover {
+            background-color: #ffd700;
+            color: #4b0082;
+        }
+
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
