--- a/index.html
+++ b/index.html
@@ -3,111 +3,184 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-   <style>
-    /* Basic styling to make the navigation visible */
-    nav ul {
-        list-style-type: none;
-        padding: 0;
-    }
+    <title>French Lessons with Meriem</title>
+    <style>
+        /* Basic styling to make the navigation visible */
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            text-align: center;
+            background-color: #4b0082; /* Purple */
+        }
 
-    nav ul li {
-        display: inline;
-        margin-right: 15px;
-    }
+        nav ul li {
+            display: inline;
+            margin-right: 15px;
+        }
 
-    nav ul li a {
-        text-decoration: none;
-        color: blue;
-    }
+        nav ul li a {
+            text-decoration: none;
+            color: white;
+            padding: 10px;
+        }
 
-    nav ul li a:hover {
-        text-decoration: underline;
-    }
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f9f5ff; /* Light yellow */
-        color: #4b0082; /* Purple */
-    }
-    header {
-        background-color: #ffd700; /* Golden yellow */
-        color: #4b0082;
-        text-align: center;
-        padding: 20px;
-    }
-    section {
-        padding: 20px;
-        text-align: center;
-    }
-    h1 {
-        margin: 10px 0;
-    }
-    p {
-        line-height: 1.6;
-    }
-    .price-caption {
-        background-color: #4b0082;
-        color: #fff;
-        padding: 10px;
-        margin: 20px 0;
-        font-weight: bold;
-        border-radius: 5px;
-    }
-    .packs {
-        background-color: #fff8dc; /* Light cream yellow */
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        margin: 20px auto;
-        width: 80%;
-        max-width: 600px;
-    }
-    .packs h2 {
-        color: #4b0082;
-    }
-    footer {
-        text-align: center;
-        background-color: #ffd700;
-        color: #4b0082;
-        padding: 10px;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-    }
-    .language-switcher {
-        margin: 10px 0;
-        text-align: center;
-    }
-    .language-switcher button {
-        margin: 5px;
-        padding: 10px 15px;
-        border: none;
-        border-radius: 5px;
-        background-color: #4b0082;
-        color: #fff;
-        cursor: pointer;
-    }
-    .language-switcher button:hover {
-        background-color: #ffd700;
-        color: #4b0082;
-    }
-</style>
+        nav ul li a:hover {
+            background-color: #ffd700; /* Gold */
+            color: white;
+        }
 
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f5ff; /* Light yellow */
+            color: #4b0082; /* Purple */
+        }
+
+        header {
+            background-color: #ffd700; /* Golden yellow */
+            color: #4b0082;
+            text-align: center;
+            padding: 20px;
+        }
+
+        section {
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 10px 0;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        /* Dark Purple Bar Section */
+        #intro {
+            background-color: #5A1A8A; /* Dark Purple */
+            color: white;
+            padding: 40px;
+            text-align: center;
+        }
+
+        #intro h2 {
+            font-size: 2.5em;
+        }
+
+        #intro p {
+            font-size: 1.2em;
+        }
+
+        /* Tariff Section */
+        #tariffs {
+            text-align: center;
+            margin: 20px;
+        }
+
+        #tariffs .price-caption {
+            background-color: #4b0082; /* Purple */
+            color: #fff;
+            padding: 10px;
+            margin: 20px 0;
+            font-weight: bold;
+            border-radius: 5px;
+        }
+
+        #tariffs .packs {
+            background-color: #fff8dc; /* Light cream yellow */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            width: 80%;
+            max-width: 600px;
+        }
+
+        footer {
+            text-align: center;
+            background-color: #ffd700; /* Golden yellow */
+            color: #4b0082;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .language-switcher {
+            margin: 10px 0;
+            text-align: center;
+        }
+
+        .language-switcher button {
+            margin: 5px;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4b0082; /* Purple */
+            color: #fff;
+            cursor: pointer;
+        }
+
+        .language-switcher button:hover {
+            background-color: #ffd700; /* Gold */
+            color: #4b0082;
+        }
+
+    </style>
 </head>
 <body>
+
     <!-- Navigation Menu -->
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="teacher-infos.html">Teacher Infos</a></li>
+            <li><a href="teacher-infos.html">Teacher Info</a></li>
         </ul>
     </nav>
 
-    <!-- Main Content -->
-    <h1>Welcome to My Website!</h1>
-    <p>This is the homepage. Use the navigation menu above to explore other pages.</p>
+    <!-- Main Header -->
+    <header>
+        <h1>Welcome to French Lessons with Meriem!</h1>
+        <p>Experienced French teacher with 10 years of expertise.</p>
+    </header>
+
+    <!-- Dark Purple Bar with Introduction -->
+    <section id="intro">
+        <h2>Learn French with a Skilled Teacher</h2>
+        <p>With over 10 years of experience, I specialize in teaching professionals, kids, families, and diplomats. Whether you're starting from scratch, need to improve your pronunciation, grammar, or prepare for exams, I can guide you through the learning process. I also help you learn to write official documents with confidence.</p>
+    </section>
+
+    <!-- Tariff Section -->
+    <section id="tariffs">
+        <div class="price-caption">
+            <h3>My Tariffs</h3>
+            <p>€15 for 90 minutes</p>
+        </div>
+
+        <div class="packs">
+            <h2>Special Packs</h2>
+            <ul>
+                <li>€150 for 12 lessons (standard pack)</li>
+                <li>€200 for 15 pronunciation lessons (pronunciation pack)</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Language Switcher (optional) -->
+    <section class="language-switcher">
+        <button onclick="location.href='index-en.html'">English</button>
+        <button onclick="location.href='index-fr.html'">Français</button>
+        <button onclick="location.href='index-ar.html'">العربية</button>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>Contact me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    </footer>
+
 </body>
 </html>
