--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
             background-color: #ffd700; /* Gold */
             color: #4b0082;
         }
+        <!-- Language Switcher -->
+    <div class="language-switcher">
+        <button onclick="changeLanguage('en')">English</button>
+        <button onclick="changeLanguage('ar')">Arabic</button>
+        <button onclick="changeLanguage('fr')">French</button>
+    </div>
+
+    <!-- Image Section -->
+    <img src="images/home-banner.jpg" alt="French Teacher Home Page Banner" width="100%" />
+
 
     </style>
 </head>
