--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         section {
             padding: 20px;
             text-align: center;
+            <!-- Banner Image inside a Section -->
+    <section>
+        <img src="https://github.com/meriem-beep/French-lessons-/blob/main/home-banner.IMG_3100 (1)jpeg?raw=true" alt="French Teacher Home Page Banner" width="100%" />
+    </section>
         }
 
         h1 {
