--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             text-align: center;
             <!-- Banner Image inside a Section -->
     <section>
-        <img src="https://github.com/meriem-beep/French-lessons-/blob/main/home-banner.IMG_3100 (1)jpeg?raw=true" alt="French Teacher Home Page Banner" width="100%" />
+        <img src="https://github.com/meriem-beep/French-lessons-/blob/main/home-banner.peg?raw=true" alt="French Teacher Home Page Banner" width="100%" />
     </section>
         }
 
