--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         }
 
         body {
+            <!-- Banner Image -->
+    <img src="https://github.com/meriem-beep/French-lessons-/blob/main/IMG_3100%20(1).jpeg?raw=true" alt="French Teacher Home Page Banner" width="100%" />
+
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -55,9 +58,7 @@
             padding: 20px;
             text-align: center;
             <!-- Banner Image inside a Section -->
-    <section>
-        <img src="https://github.com/meriem-beep/French-lessons-/blob/main/home-banner.peg?raw=true" alt="French Teacher Home Page Banner" width="100%" />
-    </section>
+   
         }
 
         h1 {
