--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <div class="language-switcher">
+        <button onclick="changeLanguage('en')">English</button>
+        <button onclick="changeLanguage('ar')">Arabic</button>
+        <button onclick="changeLanguage('fr')">French</button>
+    </div>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French Lessons with Meriem</title>
@@ -128,6 +134,13 @@
             background-color: #ffd700; /* Gold */
             color: #4b0082;
         }
+
+        /* Banner Image Styling */
+        .banner-image {
+            width: 80%; /* Adjusted width to make it smaller */
+            margin: 0 auto;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -142,7 +155,7 @@
     </nav>
 
     <!-- Banner Image -->
-    <img src="https://github.com/meriem-beep/French-lessons-/blob/main/IMG_3100%20(1).jpeg?raw=true" alt="French Teacher Home Page Banner" width="100%" />
+    <img src="https://github.com/meriem-beep/French-lessons-/blob/main/AW-Shooting-2024.04.15_G3-17.jpeg?raw=true" alt="French Teacher Home Page Banner" class="banner-image" />
 
     <!-- Main Header -->
     <header>
