--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <div class="language-switcher">
-        <button onclick="changeLanguage('en')">English</button>
-        <button onclick="changeLanguage('ar')">Arabic</button>
-        <button onclick="changeLanguage('fr')">French</button>
-    </div>
+    <button onclick="changeLanguage('en')">English</button>
+    <button onclick="changeLanguage('ar')">Arabic</button>
+    <button onclick="changeLanguage('fr')">French</button>
+</div>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -135,12 +135,6 @@
             color: #4b0082;
         }
 
-        /* Banner Image Styling */
-        .banner-image {
-            width: 80%; /* Adjusted width to make it smaller */
-            margin: 0 auto;
-            display: block;
-        }
     </style>
 </head>
 <body>
@@ -154,14 +148,14 @@
         </ul>
     </nav>
 
-    <!-- Banner Image -->
-    <img src="https://github.com/meriem-beep/French-lessons-/blob/main/AW-Shooting-2024.04.15_G3-17.jpeg?raw=true" alt="French Teacher Home Page Banner" class="banner-image" />
-
     <!-- Main Header -->
     <header>
         <h1>Welcome to French Lessons with Meriem!</h1>
         <p>Experienced French teacher with 10 years of expertise.</p>
     </header>
+
+    <!-- Banner Image -->
+    <img src="https://github.com/meriem-beep/French-lessons-/blob/main/IMG_2556.jpeg?raw=true" alt="French Teacher Home Page Banner" width="100%" />
 
     <!-- Dark Purple Bar with Introduction -->
     <section id="intro">
