--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <div class="language-switcher">
-    <button onclick="changeLanguage('en')">English</button>
-    <button onclick="changeLanguage('ar')">Arabic</button>
-    <button onclick="changeLanguage('fr')">French</button>
-</div>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French Lessons with Meriem</title>
@@ -150,40 +144,40 @@
 
     <!-- Main Header -->
     <header>
-        <h1>Welcome to French Lessons with Meriem!</h1>
-        <p>Experienced French teacher with 10 years of expertise.</p>
+        <h1 id="header-title">Welcome to French Lessons with Meriem!</h1>
+        <p id="header-desc">Experienced French teacher with 10 years of expertise.</p>
     </header>
 
     <!-- Banner Image -->
-    <img src="https://github.com/meriem-beep/French-lessons-/blob/main/IMG_2556.jpeg?raw=true" alt="French Teacher Home Page Banner" width="100%" />
+    <img src="https://raw.githubusercontent.com/meriem-beep/French-lessons-/main/IMG_2556.jpeg" alt="French Teacher Home Page Banner" style="width: 80%; display: block; margin: 0 auto; border-radius: 10px;" />
 
     <!-- Dark Purple Bar with Introduction -->
     <section id="intro">
-        <h2>Learn French with a Skilled Teacher</h2>
-        <p>With over 10 years of experience, I specialize in teaching professionals, kids, families, and diplomats. Whether you're starting from scratch, need to improve your pronunciation, grammar, or prepare for exams, I can guide you through the learning process. I also help you learn to write official documents with confidence.</p>
+        <h2 id="intro-title">Learn French with a Skilled Teacher</h2>
+        <p id="intro-text">With over 10 years of experience, I specialize in teaching professionals, kids, families, and diplomats. Whether you're starting from scratch, need to improve your pronunciation, grammar, or prepare for exams, I can guide you through the learning process. I also help you learn to write official documents with confidence.</p>
     </section>
 
     <!-- Tariff Section -->
     <section id="tariffs">
         <div class="price-caption">
-            <h3>My Tariffs</h3>
-            <p>€15 for 90 minutes</p>
+            <h3 id="tariffs-title">My Tariffs</h3>
+            <p id="tariffs-price">€15 for 90 minutes</p>
         </div>
 
         <div class="packs">
-            <h2>Special Packs</h2>
+            <h2 id="packs-title">Special Packs</h2>
             <ul>
-                <li>€150 for 12 lessons (standard pack)</li>
-                <li>€200 for 15 pronunciation lessons (pronunciation pack)</li>
+                <li id="packs-item-1">€150 for 12 lessons (standard pack)</li>
+                <li id="packs-item-2">€200 for 15 pronunciation lessons (pronunciation pack)</li>
             </ul>
         </div>
     </section>
 
-    <!-- Language Switcher (optional) -->
+    <!-- Language Switcher -->
     <section class="language-switcher">
-        <button onclick="location.href='index-en.html'">English</button>
-        <button onclick="location.href='index-fr.html'">Français</button>
-        <button onclick="location.href='index-ar.html'">العربية</button>
+        <button onclick="changeLanguage('en')">English</button>
+        <button onclick="changeLanguage('fr')">Français</button>
+        <button onclick="changeLanguage('ar')">العربية</button>
     </section>
 
     <!-- Footer -->
@@ -191,5 +185,55 @@
         <p>Contact me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
     </footer>
 
+    <!-- Language Switch Script -->
+    <script>
+        const translations = {
+            en: {
+                headerTitle: "Welcome to French Lessons with Meriem!",
+                headerDesc: "Experienced French teacher with 10 years of expertise.",
+                introTitle: "Learn French with a Skilled Teacher",
+                introText: "With over 10 years of experience, I specialize in teaching professionals, kids, families, and diplomats. Whether you're starting from scratch, need to improve your pronunciation, grammar, or prepare for exams, I can guide you through the learning process. I also help you learn to write official documents with confidence.",
+                tariffsTitle: "My Tariffs",
+                tariffsPrice: "€15 for 90 minutes",
+                packsTitle: "Special Packs",
+                packsItem1: "€150 for 12 lessons (standard pack)",
+                packsItem2: "€200 for 15 pronunciation lessons (pronunciation pack)"
+            },
+            fr: {
+                headerTitle: "Bienvenue aux cours de français avec Meriem!",
+                headerDesc: "Professeure de français expérimentée avec 10 ans d'expérience.",
+                introTitle: "Apprenez le français avec une enseignante qualifiée",
+                introText: "Avec plus de 10 ans d'expérience, je me spécialise dans l'enseignement aux professionnels, enfants, familles et diplomates. Que vous débutiez de zéro, ayez besoin d'améliorer votre prononciation, grammaire, ou de vous préparer pour des examens, je peux vous guider tout au long du processus d'apprentissage. Je vous aide également à apprendre à rédiger des documents officiels en toute confiance.",
+                tariffsTitle: "Mes Tarifs",
+                tariffsPrice: "15 € pour 90 minutes",
+                packsTitle: "Packs Spéciaux",
+                packsItem1: "150 € pour 12 cours (pack standard)",
+                packsItem2: "200 € pour 15 cours de prononciation (pack prononciation)"
+            },
+            ar: {
+                headerTitle: "مرحبًا بكم في دروس اللغة الفرنسية مع مريم!",
+                headerDesc: "مدرسة لغة فرنسية ذات خبرة لأكثر من 10 سنوات.",
+                introTitle: "تعلم الفرنسية مع معلمة محترفة",
+                introText: "مع أكثر من 10 سنوات من الخبرة، أتخصص في تعليم المهنيين، الأطفال، العائلات والدبلوماسيين. سواء كنت مبتدئًا، تحتاج إلى تحسين النطق، القواعد أو التحضير للامتحانات، يمكنني إرشادك خلال عملية التعلم. كما أساعدك على تعلم كتابة المستندات الرسمية بثقة.",
+                tariffsTitle: "أسعاري",
+                tariffsPrice: "15 يورو لمدة 90 دقيقة",
+                packsTitle: "باقات خاصة",
+                packsItem1: "150 يورو لـ 12 درسًا (الباقة العادية)",
+                packsItem2: "200 يورو لـ 15 درس نطق (باقة النطق)"
+            }
+        };
+
+        function changeLanguage(lang) {
+            document.getElementById('header-title').textContent = translations[lang].headerTitle;
+            document.getElementById('header-desc').textContent = translations[lang].headerDesc;
+            document.getElementById('intro-title').textContent = translations[lang].introTitle;
+            document.getElementById('intro-text').textContent = translations[lang].introText;
+            document.getElementById('tariffs-title').textContent = translations[lang].tariffsTitle;
+            document.getElementById('tariffs-price').textContent = translations[lang].tariffsPrice;
+            document.getElementById('packs-title').textContent = translations[lang].packsTitle;
+            document.getElementById('packs-item-1').textContent = translations[lang].packsItem1;
+            document.getElementById('packs-item-2').textContent = translations[lang].packsItem2;
+        }
+    </script>
 </body>
 </html>
