--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French Lessons with Meriem</title>
     <style>
-        /* Basic styling for navigation */
         nav ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
             text-align: center;
-            background-color: #4b0082; /* Purple */
+            background-color: #4b0082;
         }
 
         nav ul li {
@@ -26,7 +25,7 @@
         }
 
         nav ul li a:hover {
-            background-color: #ffd700; /* Gold */
+            background-color: #ffd700;
             color: white;
         }
 
@@ -34,76 +33,70 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f5ff; /* Light yellow */
-            color: #4b0082; /* Purple */
+            background-color: #f9f5ff;
+            color: #4b0082;
         }
 
         header {
+            background-color: #ffd700;
+            color: #4b0082;
             text-align: center;
             padding: 20px;
         }
 
-        section {
-            padding: 20px;
-            text-align: center;
+        header h1 {
+            font-size: 2.5em;
+            margin: 10px 0;
         }
 
-        img {
-            display: block;
-            margin: 0 auto;
-            max-width: 80%; /* Make the image responsive and not very big */
-            height: auto;
-            margin-bottom: 20px;
+        header p {
+            font-size: 1.2em;
         }
 
         .language-switcher {
-            margin: 10px 0;
             text-align: center;
+            margin: 10px 0;
         }
 
         .language-switcher button {
-            margin: 5px;
             padding: 10px 15px;
+            margin: 5px;
             border: none;
             border-radius: 5px;
-            background-color: #4b0082; /* Purple */
-            color: #fff;
+            background-color: #4b0082;
+            color: white;
             cursor: pointer;
         }
 
         .language-switcher button:hover {
-            background-color: #ffd700; /* Gold */
+            background-color: #ffd700;
             color: #4b0082;
         }
-    </style>
-    <script>
-        function changeLanguage(language) {
-            const content = {
-                en: {
-                    title: "French Lessons with Meriem",
-                    intro: "Learn French with a Skilled Teacher",
-                    description: "With over 10 years of experience, I specialize in teaching professionals, kids, families, and diplomats. Whether you're starting from scratch, need to improve your pronunciation, grammar, or prepare for exams, I can guide you through the learning process. I also help you learn to write official documents with confidence."
-                },
-                fr: {
-                    title: "Cours de français avec Meriem",
-                    intro: "Apprenez le français avec une enseignante expérimentée",
-                    description: "Avec plus de 10 ans d'expérience, je me spécialise dans l'enseignement aux professionnels, enfants, familles et diplomates. Que vous soyez débutant, que vous ayez besoin d'améliorer votre prononciation, votre grammaire ou de vous préparer aux examens, je peux vous guider tout au long du processus d'apprentissage. Je vous aide également à rédiger des documents officiels avec confiance."
-                },
-                ar: {
-                    title: "دروس اللغة الفرنسية مع مريم",
-                    intro: "تعلم الفرنسية مع معلمة ماهرة",
-                    description: "مع أكثر من 10 سنوات من الخبرة، أختص في تعليم المهنيين والأطفال والعائلات والدبلوماسيين. سواء كنت مبتدئًا أو تحتاج إلى تحسين النطق أو القواعد أو التحضير للامتحانات، يمكنني إرشادك خلال عملية التعلم. كما أساعدك على كتابة المستندات الرسمية بثقة."
-                }
-            };
 
-            document.querySelector("h1").textContent = content[language].title;
-            document.querySelector("#intro h2").textContent = content[language].intro;
-            document.querySelector("#intro p").textContent = content[language].description;
+        .tariff-section {
+            text-align: center;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: #fff4cc;
+            border: 2px solid #ffd700;
+            width: 80%;
+            border-radius: 10px;
         }
-    </script>
+
+        .tariff-section h2 {
+            font-size: 2em;
+            color: #4b0082;
+            margin-bottom: 15px;
+        }
+
+        .tariff-section p {
+            font-size: 1.5em;
+            color: #4b0082;
+            margin: 5px 0;
+        }
+    </style>
 </head>
 <body>
-    <!-- Navigation Menu -->
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -112,26 +105,39 @@
         </ul>
     </nav>
 
-    <!-- Top Image -->
-    <img src="https://raw.githubusercontent.com/meriem-beep/French-lessons-/main/IMG_2556.jpeg" alt="French Teacher Home Page Banner">
-
-    <!-- Main Header -->
+    <!-- Image Section -->
     <header>
-        <h1>French Lessons with Meriem</h1>
+        <img src="IMG_2556.jpg" alt="French Teacher Banner" style="width: 80%; display: block; margin: auto;" />
+        <h1>Welcome to French Lessons with Meriem!</h1>
         <p>Experienced French teacher with 10 years of expertise.</p>
     </header>
 
     <!-- Language Switcher -->
     <div class="language-switcher">
         <button onclick="changeLanguage('en')">English</button>
-        <button onclick="changeLanguage('fr')">Français</button>
-        <button onclick="changeLanguage('ar')">العربية</button>
+        <button onclick="changeLanguage('ar')">Arabic</button>
+        <button onclick="changeLanguage('fr')">French</button>
     </div>
 
-    <!-- Dark Purple Bar with Introduction -->
-    <section id="intro">
-        <h2>Learn French with a Skilled Teacher</h2>
-        <p>With over 10 years of experience, I specialize in teaching professionals, kids, families, and diplomats. Whether you're starting from scratch, need to improve your pronunciation, grammar, or prepare for exams, I can guide you through the learning process. I also help you learn to write official documents with confidence.</p>
-    </section>
+    <!-- Tariff Section -->
+    <div class="tariff-section">
+        <h2>Tariff Information</h2>
+        <p>1 Lesson: 25€</p>
+        <p>10 Lessons Package: 200€</p>
+        <p>Flexible Timings and Personalized Sessions!</p>
+    </div>
+
+    <!-- Script for Language Switcher -->
+    <script>
+        function changeLanguage(lang) {
+            if (lang === 'en') {
+                window.location.href = 'index-en.html';
+            } else if (lang === 'ar') {
+                window.location.href = 'index-ar.html';
+            } else if (lang === 'fr') {
+                window.location.href = 'index-fr.html';
+            }
+        }
+    </script>
 </body>
 </html>
