--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
             border-radius: 10px;
             background-color: #fff8dc; /* Light cream yellow */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            font-size: 1.5em;
+            font-weight: bold;
         }
 
         #tariffs h3 {
             color: #4b0082; /* Purple */
-            font-size: 1.8em;
+            font-size: 2em;
             margin-bottom: 10px;
         }
 
